tests/simple_arrays/simple_arrays.exp
Error: array.js:14
 14: function bar(i): string { return a[i]; }
                                      ^^^^ number. This type is incompatible with the expected return type of
 14: function bar(i): string { return a[i]; }
                      ^^^^^^ string

Error: array.js:20
 20: function baz(i:number): string { return a[i]; }
                                             ^^^^ number. This type is incompatible with the expected return type of
 20: function baz(i:number): string { return a[i]; }
                             ^^^^^^ string

Error: array2.js:8
  8: function foo(i: number): string { return a[i]; }
                                              ^^^^ number. This type is incompatible with the expected return type of
  8: function foo(i: number): string { return a[i]; }
                              ^^^^^^ string


Found 3 errors
